[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/objects/Player/control_states/Control.gd" type="Script" id=1]
[ext_resource path="res://scripts/miscs/state_machine/state_machine.gd" type="Script" id=2]
[ext_resource path="res://scenes/objects/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/3d/vehicules/plane01/Plane01.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Player/control_states/Gameplay3.gd" type="Script" id=5]
[ext_resource path="res://scenes/objects/Player/control_states/None.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 4.99122 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Skin" type="Spatial" parent="."]

[node name="Plane01" parent="Skin" instance=ExtResource( 4 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3564, 1.18242 )
shape = SubResource( 1 )

[node name="ControlSM" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Control/None")

[node name="Control" type="Node" parent="ControlSM"]
script = ExtResource( 1 )

[node name="None" type="Node" parent="ControlSM/Control"]
script = ExtResource( 6 )

[node name="Gameplay1" type="Node" parent="ControlSM/Control"]

[node name="Gameplay2" type="Node" parent="ControlSM/Control"]

[node name="Gameplay3" type="Node" parent="ControlSM/Control"]
script = ExtResource( 5 )
